<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding"
    android:paddingVertical="@dimen/padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true" />

    <Button
        android:layout_width="@dimen/button"
        android:layout_height="@dimen/button"
        android:layout_marginTop="@dimen/padding"
        android:onClick="increment"
        android:text="@string/increment" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:paddingHorizontal="@dimen/paddingQ"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize" />

    <Button
        android:layout_width="@dimen/button"
        android:layout_height="@dimen/button"
        android:onClick="decrement"
        android:text="@string/decrement" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/price"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollars"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:onClick="submitOrder"
        android:text="@string/orderButton" />

</LinearLayout>